feat: move to minecraft 1.16 and latest spigot

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,6 +2,7 @@ name: CommandBlockTP
 version: 1.0.0
 author: Merlin M. Scheurer
 main: de.merlin.commandblocktp.Main
+api-version: 1.16
 
 commands:
   cmdtp:
